Activity 3: The A Pythonist flash had the wrong colour thus fixed in this commit and a minor tweak to grey ring around photo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,7 +543,7 @@ small {
 }
 
 .grey-text {
-  color: #666 !important;
+  color: #004b80 !important;
 }
 
 /* main .teal-text */
